# rust-error-util

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/error/: mod.rs
