[package]
name = "error-util"
version = "0.1.0"
edition = "2021"
description = "Error util"
categories = ["development-tools"]
keywords = ["hub1989", "error"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
alcoholic_jwt = "4091.0.0"
async-graphql = "5.0.9"
bson = "2.6.1"
mongodb = "2.5.0"
reqwest = "0.11.18"
serde = "1.0.163"
tonic = "0.9.2"

[lib]
path = "src/lib.rs"
name = "hub1989_error_util"
